--- a/index.html
+++ b/index.html
@@ -3,32 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <a href="#">WebStudio</a>
       <nav>
-      <ul>
-        <li>
-          <a href="#">Студія</a>
-        </li>
-        <li>
-          <a href="./portfolio.html">Портфоліо</a>
-        </li>
-        <li>
-          <a href="#">Контакти</a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+        <ul>
+          <li>
+            <a href="#">Студія</a>
+          </li>
+          <li>
+            <a href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li>
+            <a href="#">Контакти</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -46,20 +52,20 @@
             </p>
           </li>
           <li>
-          <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-          <h3>ПЛАНУВАННЯ</h3>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
