--- a/portfolio.html
+++ b/portfolio.html
@@ -13,109 +13,109 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li>
-            <a href="#">Студія</a>
+    <header class="header">
+      <a class="header-logo" href="./index.html">WebStudio</a>
+      <nav class="navigation">
+        <ul class="nav-list">
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="#">Студія</a>
           </li>
-          <li>
-            <a href="№">Портфоліо</a>
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="№">Портфоліо</a>
           </li>
-          <li>
-            <a href="#">Контакти</a>
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="#">Контакти</a>
           </li>
         </ul>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="list">
+          <li class="list-item">
+            <a class="list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="list-item">
+            <a class="list-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </nav>
     </header>
-    <main>
-      <div>
-        <button type="button">Усі</button>
-        <button type="button">Веб-сайти</button>
-        <button type="button">Додатки</button>
-        <button type="button">Дизайн</button>
-        <button type="button">Маркетинг</button>
+    <main class="main">
+      <div class="container">
+        <button class="btn" type="button">Усі</button>
+        <button class="btn" type="button">Веб-сайти</button>
+        <button class="btn" type="button">Додатки</button>
+        <button class="btn" type="button">Дизайн</button>
+        <button class="btn" type="button">Маркетинг</button>
       </div>
-      <ul>
-        <li>
-          <article>
-            <img src="./images/Технокряк.jpg" alt="Технокряк" />
-            <h4>Технокряк</h4>
-            <p>Веб-сайт</p>
+      <ul class="main-list">
+        <li class="main-list-item">
+          <article class="info">
+            <img class="info-img" src="./images/Технокряк.jpg" alt="Технокряк" />
+            <h4 class="info-title">Технокряк</h4>
+            <p class="info-text">Веб-сайт</p>
+          </article>
+        </li>
+        <li class="main-list-item">
+          <article class="info">
+            <img class="info-img" src="./images/ПостерNewOrlea.jpg" alt="NewOrlean" />
+            <h4 class="info-title">Постер New Orlean vs Golden Star</h4>
+            <p class="info-text">Дизайн</p>
           </article>
         </li>
         <li>
-          <article>
-            <img src="./images/ПостерNewOrlea.jpg" alt="NewOrlean" />
-            <h4>Постер New Orlean vs Golden Star</h4>
-            <p>Дизайн</p>
+          <article class="info">
+            <img class="info-img" src="./images/Seafood.jpg" alt="Seafood" />
+            <h4 class="info-title">Ресторан Seafood</h4>
+            <p class="info-text">Додаток</p>
+          </article>
+        </li>
+        <li class="main-list-item">
+          <article class="info">
+            <img class="info-img" src="./images/ПроєктPrime.jpg" alt="Prime" />
+            <h4 class="info-title">Проєкт Prime</h4>
+            <p class="info-text">Маркетинг</p>
           </article>
         </li>
         <li>
-          <article>
-            <img src="./images/Seafood.jpg" alt="Seafood" />
-            <h4>Ресторан Seafood</h4>
-            <p>Додаток</p>
+          <article class="info">
+            <img class="info-img" src="./images/Boxes.jpg" alt="Boxes" />
+            <h4 class="info-title">Проєкт Boxes</h4>
+            <p class="info-text">Додаток</p>
+          </article>
+        </li>
+        <li class="main-list-item">
+          <article class="info">
+            <img class="info-img" src="./images/Inspiration.jpg" alt="Inspiration" />
+            <h4 class="info-title">Inspiration has no Borders</h4>
+            <p class="info-text">Веб-сайт</p>
           </article>
         </li>
         <li>
-          <article>
-            <img src="./images/ПроєктPrime.jpg" alt="Prime" />
-            <h4>Проєкт Prime</h4>
-            <p>Маркетинг</p>
+          <article class="info">
+            <img class="info-img" src="./images/ВиданняLimited.jpg" alt="Limited" />
+            <h4 class="info-title">Видання Limited Edition</h4>
+            <p class="info-text">Дизайн</p>
           </article>
         </li>
-        <li>
-          <article>
-            <img src="./images/Boxes.jpg" alt="Boxes" />
-            <h4>Проєкт Boxes</h4>
-            <p>Додаток</p>
+        <li class="main-list-item">
+          <article class="info">
+            <img class="info-img" src="./images/ПроєктLab.jpg" alt="Lab" />
+            <h4 class="info-title">Проєкт LAB</h4>
+            <p class="info-text">Маркетинг</p>
           </article>
         </li>
-        <li>
-          <article>
-            <img src="./images/Inspiration.jpg" alt="Inspiration" />
-            <h4>Inspiration has no Borders</h4>
-            <p>Веб-сайт</p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <img src="./images/ВиданняLimited.jpg" alt="Limited" />
-            <h4>Видання Limited Edition</h4>
-            <p>Дизайн</p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <img src="./images/ПроєктLab.jpg" alt="Lab" />
-            <h4>Проєкт LAB</h4>
-            <p>Маркетинг</p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <img src="./images/Growing.jpg" alt="Growing" />
-            <h4>Growing Business</h4>
-            <p>Додаток</p>
+        <li class="main-list-item">
+          <article class="info">
+            <img class="info-img" src="./images/Growing.jpg" alt="Growing" />
+            <h4 class="info-title">Growing Business</h4>
+            <p class="info-text">Додаток</p>
           </article>
         </li>
       </ul>
     </main>
-    <footer>
-      <a href="#">WebStudio</a>
-      <p>м. Київ, пр-т Лесі Українки, 26</p>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+      <a class="footer-logo" href="#">WebStudio</a>
+      <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
+      <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </footer>
   </body>
 </html>
