--- a/index.html
+++ b/index.html
@@ -13,111 +13,119 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="#">WebStudio</a>
-      <nav>
-        <ul>
-          <li>
-            <a href="#">Студія</a>
+    <header class="header">
+      <a class="header-web" href="#">Web<a class="header-studio" href="#">Studio</a></a>
+      <nav class="navigation">
+        <ul class="nav-list">
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="#">Студія</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Портфоліо</a>
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="./portfolio.html">Портфоліо</a>
           </li>
-          <li>
-            <a href="#">Контакти</a>
+          <li class="nav-list-item">
+            <a class="nav-list-link" href="#">Контакти</a>
           </li>
         </ul>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="list">
+          <li class="list-item">
+            <a class="list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="list-item">
+            <a class="list-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </nav>
     </header>
-    <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+    <main class="main">
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-btn" type="button">Замовити послугу</button>
       </section>
-      <section>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+      <section class="main-section">
+        <ul class="main-section-list">
+          <li class="main-section-list-item">
+            <h3 class="main-section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="main-section-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+          <li class="main-section-list-item">
+            <h3 class="main-section-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="main-section-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+          <li class="main-section-list-item">
+            <h3 class="main-section-title">ПЛАНУВАННЯ</h3>
+            <p class="main-section-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+          <li class="main-section-list-item">
+            <h3 class="main-section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="main-section-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img src="./images/coding.jpg" alt="coding" width="370" />
+      <section class="features">
+        <h2 class="features-title">Чим ми займаємося</h2>
+        <ul class="features-list">
+          <li class="features-list-item">
+            <img class="features-img" src="./images/coding.jpg" alt="coding" width="370" />
           </li>
-          <li>
-            <img src="./images/working.jpg" alt="working" width="370" />
+          <li class="features-list-item">
+            <img class="features-img" src="./images/working.jpg" alt="working" width="370" />
           </li>
-          <li>
-            <img src="./images/designing.jpg" alt="designing" width="370" />
+          <li class="features-list-item">
+            <img class="features-img" src="./images/designing.jpg" alt="designing" width="370" />
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/Ігор.jpg" alt="Ігор" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-list-item">
+            <article class="team-info">
+            <img class="team-img" src="./images/Ігор.jpg" alt="Ігор" width="270" />
+            <h3 class="team-name">Ігор Дем'яненко</h3>
+            <p class="team-prof">Product Designer</p>
+          </article>
           </li>
-          <li>
-            <img src="./images/Ольга.jpg" alt="Ольга" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+          <li class="team-list-item">
+            <article class="team-info">
+            <img class="team-img" src="./images/Ольга.jpg" alt="Ольга" width="270" />
+            <h3 class="team-name">Ольга Рєпіна</h3>
+            <p class="team-prof">Frontend Developer</p>
+          </article>
           </li>
-          <li>
-            <img src="./images/Микола.jpg" alt="Микола" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+          <li class="team-list-item">
+            <article class="team-info">
+            <img class="team-img" src="./images/Микола.jpg" alt="Микола" width="270" />
+            <h3 class="team-name">Микола Тарасов</h3>
+            <p class="team-prof">Marketing</p>
+          </article>
           </li>
-          <li>
-            <img src="./images/Михайло.jpg" alt="Михайло" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+          <li class="team-list-item">
+            <article class="team-info">
+            <img class="team-img" src="./images/Михайло.jpg" alt="Михайло" width="270" />
+            <h3 class="team-name">Михайло Єрмаков</h3>
+            <p class="team-prof">UI Designer</p>
+          </article>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="#">WebStudio</a>
-      <p>м. Київ, пр-т Лесі Українки, 26</p>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+      <a class="footer-web" href="#">Web<a class="footer-studio" href="">Studio</a></a>
+      <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
+      <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </footer>
   </body>
 </html>
