--- a/portfolio.html
+++ b/portfolio.html
@@ -10,18 +10,20 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
     <header class="header">
-      <a class="header-logo" href="./index.html">WebStudio</a>
+      <a class="header-web" href="./index.html"
+        >Web<a class="header-studio" href="./index.html">Studio</a></a
+      >
       <nav class="navigation">
         <ul class="nav-list">
           <li class="nav-list-item">
             <a class="nav-list-link" href="#">Студія</a>
           </li>
           <li class="nav-list-item">
-            <a class="nav-list-link" href="№">Портфоліо</a>
+            <a class="nav-list-link" href="#">Портфоліо</a>
           </li>
           <li class="nav-list-item">
             <a class="nav-list-link" href="#">Контакти</a>
@@ -29,7 +31,9 @@
         </ul>
         <ul class="list">
           <li class="list-item">
-            <a class="list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="list-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="list-item">
             <a class="list-link" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -39,23 +43,43 @@
     </header>
     <main class="main">
       <div class="container">
-        <button class="btn" type="button">Усі</button>
-        <button class="btn" type="button">Веб-сайти</button>
-        <button class="btn" type="button">Додатки</button>
-        <button class="btn" type="button">Дизайн</button>
-        <button class="btn" type="button">Маркетинг</button>
+        <ul class="con-list">
+          <li class="con-list-item">
+            <button class="main-btn-1" type="button">Усі</button>
+          </li>
+          <li class="con-list-item">
+            <button class="main-btn-2" type="button">Веб-сайти</button>
+          </li>
+          <li class="con-list-item">
+            <button class="main-btn-3" type="button">Додатки</button>
+          </li>
+          <li class="con-list-item">
+            <button class="main-btn-4" type="button">Дизайн</button>
+          </li>
+          <li class="con-list-item">
+            <button class="main-btn-5" type="button">Маркетинг</button>
+          </li>
+        </ul>
       </div>
       <ul class="main-list">
         <li class="main-list-item">
           <article class="info">
-            <img class="info-img" src="./images/Технокряк.jpg" alt="Технокряк" />
+            <img
+              class="info-img"
+              src="./images/Технокряк.jpg"
+              alt="Технокряк"
+            />
             <h4 class="info-title">Технокряк</h4>
             <p class="info-text">Веб-сайт</p>
           </article>
         </li>
         <li class="main-list-item">
           <article class="info">
-            <img class="info-img" src="./images/ПостерNewOrlea.jpg" alt="NewOrlean" />
+            <img
+              class="info-img"
+              src="./images/ПостерNewOrlea.jpg"
+              alt="NewOrlean"
+            />
             <h4 class="info-title">Постер New Orlean vs Golden Star</h4>
             <p class="info-text">Дизайн</p>
           </article>
@@ -83,14 +107,22 @@
         </li>
         <li class="main-list-item">
           <article class="info">
-            <img class="info-img" src="./images/Inspiration.jpg" alt="Inspiration" />
+            <img
+              class="info-img"
+              src="./images/Inspiration.jpg"
+              alt="Inspiration"
+            />
             <h4 class="info-title">Inspiration has no Borders</h4>
             <p class="info-text">Веб-сайт</p>
           </article>
         </li>
         <li>
           <article class="info">
-            <img class="info-img" src="./images/ВиданняLimited.jpg" alt="Limited" />
+            <img
+              class="info-img"
+              src="./images/ВиданняLimited.jpg"
+              alt="Limited"
+            />
             <h4 class="info-title">Видання Limited Edition</h4>
             <p class="info-text">Дизайн</p>
           </article>
@@ -112,9 +144,13 @@
       </ul>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="#">WebStudio</a>
+      <a class="footer-web" href="./index.html"
+        >Web<a class="footer-studio" href="./index.html">Studio</a></a
+      >
       <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
-      <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="footer-mail" href="mailto:info@example.com"
+        >info@example.com</a
+      >
       <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </footer>
   </body>
