--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="header-web" href="./index.html"
-        >Web<a class="header-studio" href="./index.html">Studio</a></a
-      >
+      <a class="header-logo" href="./index.html">Web<span class="header-span">Studio</span></a>
       <nav class="navigation">
         <ul class="nav-list">
           <li class="nav-list-item">
@@ -43,23 +41,11 @@
     </header>
     <main class="main">
       <div class="container">
-        <ul class="con-list">
-          <li class="con-list-item">
-            <button class="main-btn-1" type="button">Усі</button>
-          </li>
-          <li class="con-list-item">
-            <button class="main-btn-2" type="button">Веб-сайти</button>
-          </li>
-          <li class="con-list-item">
-            <button class="main-btn-3" type="button">Додатки</button>
-          </li>
-          <li class="con-list-item">
-            <button class="main-btn-4" type="button">Дизайн</button>
-          </li>
-          <li class="con-list-item">
-            <button class="main-btn-5" type="button">Маркетинг</button>
-          </li>
-        </ul>
+        <button class="main-btn" type="button">Усі</button>
+        <button class="main-btn" type="button">Веб-сайти</button>
+        <button class="main-btn" type="button">Додатки</button>
+        <button class="main-btn" type="button">Дизайн</button>
+        <button class="main-btn" type="button">Маркетинг</button>
       </div>
       <ul class="main-list">
         <li class="main-list-item">
@@ -144,13 +130,9 @@
       </ul>
     </main>
     <footer class="footer">
-      <a class="footer-web" href="./index.html"
-        >Web<a class="footer-studio" href="./index.html">Studio</a></a
-      >
+      <a class="footer-logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
       <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
-      <a class="footer-mail" href="mailto:info@example.com"
-        >info@example.com</a
-      >
+      <a class="footer-mail" href="mailto:info@example.com">info@example.com</a>
       <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </footer>
   </body>
