--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="header-web" href="#">Web<a class="header-studio" href="#">Studio</a></a>
+      <a class="header-logo" href="#">Web<span class="header-span">Studio</span></a>
       <nav class="navigation">
         <ul class="nav-list">
           <li class="nav-list-item">
@@ -122,7 +122,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-web" href="#">Web<a class="footer-studio" href="">Studio</a></a>
+      <a class="footer-logo" href="#">Web<span class="footer-span">Studio</span></a>
       <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
       <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
