--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,118 +18,175 @@
   </head>
   <body>
     <header class="header">
-      <a class="header-logo" href="#">Web<span class="header-span">Studio</span></a>
-      <nav class="navigation">
-        <ul class="nav-list">
-          <li class="nav-list-item">
-            <a class="nav-list-link" href="#">Студія</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-list-link" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-list-link" href="#">Контакти</a>
-          </li>
-        </ul>
-        <ul class="list">
-          <li class="list-item">
-            <a class="list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="list-item">
-            <a class="list-link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <a class="header-logo" href="#"
+          >Web<span class="header-span">Studio</span></a
+        >
+        <nav class="navigation">
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="#">Студія</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-link" href="#">Контакти</a>
+            </li>
+          </ul>
+          <ul class="list">
+            <li class="list-item">
+              <a class="list-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="list-item">
+              <a class="list-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="main">
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-btn" type="button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-btn" type="button">Замовити послугу</button>
+        </div>
       </section>
       <section class="main-section">
-        <ul class="main-section-list">
-          <li class="main-section-list-item">
-            <h3 class="main-section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="main-section-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li class="main-section-list-item">
-            <h3 class="main-section-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="main-section-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li class="main-section-list-item">
-            <h3 class="main-section-title">ПЛАНУВАННЯ</h3>
-            <p class="main-section-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li class="main-section-list-item">
-            <h3 class="main-section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="main-section-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="main-section-list">
+            <li class="main-section-list-item">
+              <h3 class="main-section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="main-section-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="main-section-list-item">
+              <h3 class="main-section-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="main-section-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="main-section-list-item">
+              <h3 class="main-section-title">ПЛАНУВАННЯ</h3>
+              <p class="main-section-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="main-section-list-item">
+              <h3 class="main-section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="main-section-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="features">
-        <h2 class="features-title">Чим ми займаємося</h2>
-        <ul class="features-list">
-          <li class="features-list-item">
-            <img class="features-img" src="./images/coding.jpg" alt="coding" width="370" />
-          </li>
-          <li class="features-list-item">
-            <img class="features-img" src="./images/working.jpg" alt="working" width="370" />
-          </li>
-          <li class="features-list-item">
-            <img class="features-img" src="./images/designing.jpg" alt="designing" width="370" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="features-title">Чим ми займаємося</h2>
+          <ul class="features-list">
+            <li class="features-list-item">
+              <img
+                class="features-img"
+                src="./images/coding.jpg"
+                alt="coding"
+                width="370"
+              />
+            </li>
+            <li class="features-list-item">
+              <img
+                class="features-img"
+                src="./images/working.jpg"
+                alt="working"
+                width="370"
+              />
+            </li>
+            <li class="features-list-item">
+              <img
+                class="features-img"
+                src="./images/designing.jpg"
+                alt="designing"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-list-item">
-            <article class="team-info">
-            <img class="team-img" src="./images/Ігор.jpg" alt="Ігор" width="270" />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p class="team-prof">Product Designer</p>
-          </article>
-          </li>
-          <li class="team-list-item">
-            <article class="team-info">
-            <img class="team-img" src="./images/Ольга.jpg" alt="Ольга" width="270" />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p class="team-prof">Frontend Developer</p>
-          </article>
-          </li>
-          <li class="team-list-item">
-            <article class="team-info">
-            <img class="team-img" src="./images/Микола.jpg" alt="Микола" width="270" />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p class="team-prof">Marketing</p>
-          </article>
-          </li>
-          <li class="team-list-item">
-            <article class="team-info">
-            <img class="team-img" src="./images/Михайло.jpg" alt="Михайло" width="270" />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p class="team-prof">UI Designer</p>
-          </article>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <article class="team-info">
+                <img
+                  class="team-img"
+                  src="./images/Ігор.jpg"
+                  alt="Ігор"
+                  width="270"
+                />
+                <h3 class="team-name">Ігор Дем'яненко</h3>
+                <p class="team-prof">Product Designer</p>
+              </article>
+            </li>
+            <li class="team-list-item">
+              <article class="team-info">
+                <img
+                  class="team-img"
+                  src="./images/Ольга.jpg"
+                  alt="Ольга"
+                  width="270"
+                />
+                <h3 class="team-name">Ольга Рєпіна</h3>
+                <p class="team-prof">Frontend Developer</p>
+              </article>
+            </li>
+            <li class="team-list-item">
+              <article class="team-info">
+                <img
+                  class="team-img"
+                  src="./images/Микола.jpg"
+                  alt="Микола"
+                  width="270"
+                />
+                <h3 class="team-name">Микола Тарасов</h3>
+                <p class="team-prof">Marketing</p>
+              </article>
+            </li>
+            <li class="team-list-item">
+              <article class="team-info">
+                <img
+                  class="team-img"
+                  src="./images/Михайло.jpg"
+                  alt="Михайло"
+                  width="270"
+                />
+                <h3 class="team-name">Михайло Єрмаков</h3>
+                <p class="team-prof">UI Designer</p>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="#">Web<span class="footer-span">Studio</span></a>
+      <div class="container">
+      <a class="footer-logo" href="#"
+        >Web<span class="footer-span">Studio</span></a
+      >
       <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
-      <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="footer-mail" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
       <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </footer>
   </body>
 </html>
