--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 width="370"
               />
             </li>
-            <li class="features-list-item">
+            <li class="work-list-item">
               <img
                 class="work-img"
                 src="./images/designing.jpg"
